# gerador_de_questoes_didaxis

./: .gitignore  Constants.py  QuestGenUpdater.py  README.md  __data__.py  __main__.py  back_end.py  compilador.bat  compilador_gerador_questoes.bat  compilador_updater.bat  configuracoes.py  controller.py  ctkview.py  front_end.py  main.py  main.py.bak  model.py  pyproject.toml  quadro_de_questoes.py  requirements.txt  selecao_de_diretorio.py  setup.py  testes.py
BackEndFunctions/: Constants.py  __init__.py  aparencia.py  atualizacao.py  configuration_manager.py  feedback.py  file_manager.py  globalvars.py  image_manager.py  questions_manager.py  speller_menager.py  version_manager.py
BackEndFunctions/DataClasses/: __init__.py  configuration_data_class.py  perfil_data_class.py  personal_dictionary.py  question_data_class.py
BackEndFunctions/Errors/: __init__.py
BackEndFunctions/FileManagerLib/: __init__.py  abrir_arquivo.py  binary_serializer.py  json_serializer.py  salvar_arquivo.py
BackEndFunctions/Hints/: __init__.py
Constants/: __init__.py
Exceptions/: __init__.py
FrontEndFunctions/: Constants.py  __init__.py  caixa_de_texto.py  linha_de_questao.py  setuptoplevel.py
FrontEndFunctions/CustomFrames/: __init__.py  commandbuttonsframe.py  framequestionask.py  framequestioncount.py  framequestionparameters.py  janeladebotoes.py  janeladeconfiguracoes.py  janeladequestoes.py  janelaenunciadodaquestao.py  janelaopcoesdaquestao.py  janelaparametrosdaquestao.py  janelaquantidadedequestoes.py  questioncountframe.py  questionparametersframe.py  questionsframe.py  questionstatementframe.py  setupframe.py
FrontEndFunctions/Hints/: __init__.py
FrontEndFunctions/SetupFrames/: __init__.py
FrontEndFunctions/janelas/: __init__.py  janeladebotoes.py  janeladeconfiguracoes.py  janeladequestoes.py  janelaenunciadodaquestao.py  janelaopcoesdaquestao.py  janelaparametrosdaquestao.py  janelaquantidadedequestoes.py
Hints/: hints.py
Modules/: __init__.py  arquivo.py  arquivos.py  atualizacao.py  configuracoes.py  configuration_manager.py  constants.py  corretor_ortografico.py  imagens.py  painel_de_configuracoes.py  perfil.py  place_holder.py  quadro_de_questoes.py  question.py  questions_manager.py
Modules/Errors/: __init__.py
Modules/data_classes/: __init__.py  configuration_parameters.py  perfil.py  personal_dictionary.py  questao.py
Modules/funcoes/: __init__.py  abrir_arquivo.py  aparencia.py  feedback.py  file_serializer.py  funcoes_feedback.py  json_arquivo.py  salvar_arquivo.py
Modules/janelas/: __init__.py  janeladebotoes.py  janeladeconfiguracoes.py  janeladequestoes.py  janelaenunciadodaquestao.py  janelaopcoesdaquestao.py  janelaparametrosdaquestao.py  janelaquantidadedequestoes.py  linha_de_questao.py
Modules/models/: __init__.py  caixa_de_texto.py  globalvars.py  lista_de_questoes.py  questao.py
Modules/quadro_de_questoes/: __init__.py  linha_de_questao.py  quadro_de_questoes.py
Modulos/: atualizacao.py
Views/: Hints.py  commandbuttonsframe.py  linha_de_questao.py  questionchoicesframe.py  questioncountframe.py  questionparametersframe.py  questionsframe.py  questionstatementframe.py  setuptoplevel.py
configs/: configs.json  perfil.json
contracts/: ControllerContracts.py  ViewsContracts.py  __init__.py
gerador_questao/configs/: configs.json
src/: __main__.py  controller.py  ctkview.py  mkdocs.yml  model.py
src/Constants/: __init__.py  constants.py
src/Contracts/: controller.py  controllercontract.py  model.py  questionsdbcontrct.py  spelledtextboxcontracts.py  speller.py  viewcontract.py
src/DataModels/: enums.py  imagemodel.py  questionmodel.py  questionsdb.py  topleveltoolsmodel.py  (+3 more)
tester/: uniteste.py
tests/: test_constants.py  test_control.py  test_ctkview.py  test_model.py
(+57 files in other folders)
